--- a/index.html
+++ b/index.html
@@ -4,15 +4,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Описание">
+  <meta name="description" content="Место">
   <meta name="author" content="Родион Черников">
-  <title>Заголовок</title>
-  <link rel="icon" href="./images/favicon.png" type="image/png">
+  <title>Место-Россия</title>
+  <!-- <link rel="icon" href="./images/favicon.png" type="image/png"> -->
   <link href="./pages/index.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="page">
+  <!-- Шапка сайта -->
+  <header class="header page__section page__section_place_header">
+    <div class="header__logo"></div>
+  </header>
+  <!-- Декоративная линия-разделитель -->
+  <div class="section-line page__section"></div>
+  <!-- Основная часть сайта -->
+  <main class="main">
+    <section class="profile page__section page__section_place_profile">
+      <img src="./images/avatar.jpg" alt="Аватар" class="profile__avatar">
+      <div class="profile__info">
+        <h1 class="profile__name page-text">Жак-Ив Кусто</h1>
+        <button name="btn-edit" type="button" class="page-btn page-btn_type_edit"><img src="./images/btn_edit_ico.svg"
+            alt="Редактировать"></button>
+        <p class="profile__profession page-text">Исследователь океана</p>
+      </div>
+      <button name="btn-add" type="button" class="page-btn page-btn_type_add"><img src="./images/btn_add_ico.svg"
+          alt="Добавить"></button>
+    </section>
+    <section class="cards page__section page__section_place_cards">
 
+
+    </section>
+  </main>
+  <!-- Подвал сайта -->
+  <footer class="footer page__section page__section_place_footer">
+    <p class="footer__copyright page-text">&copy; 2021 Mesto Russia</p>
+  </footer>
 </body>
 
 </html>
