--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
       <img src="./images/avatar.jpg" alt="Аватар" class="profile__avatar">
       <div class="profile__info">
         <h1 class="profile__name page__text">Жак-Ив Кусто</h1>
-        <button name="btn-edit" type="button" class="page-btn page-btn_type_edit"><img src="./images/btn_edit_ico.svg"
-            alt="Редактировать" class="page-btn__ico page-btn__ico_type_edit"></button>
+        <button name="btn-edit" type="button" class="page-btn page-btn_type_edit"></button>
         <p class="profile__about page__text">Исследователь океана</p>
       </div>
-      <button name="btn-add" type="button" class="page-btn page-btn_type_add"><img src="./images/btn_add_ico.svg"
-          alt="Добавить" class="page-btn__ico page-btn__ico_type_add"></button>
+      <button name="btn-add" type="button" class="page-btn page-btn_type_add"></button>
     </section>
     <section class="cards page__section page__section_place_cards">
 
@@ -35,44 +33,32 @@
         <li class="cards__item">
           <img src="./images/cards_image/monterey.jpg" alt="Монтерей" class="cards__image">
           <h2 class="cards__heading page__text">Монтерей</h2>
-          <a href="#" class="cards__like-btn">
-            <div class="cards__like-btn-ico "></div>
-          </a>
+          <button class="page-btn cards__like-btn" type="button"></button>
         </li>
         <li class="cards__item">
           <img src="./images/cards_image/eyjafjallajokull.jpg" alt="Эйяфьядлайёкюдль" class="cards__image">
           <h2 class="cards__heading page__text">Эйяфьядлайёкюдль</h2>
-          <a href="#" class="cards__like-btn">
-            <div class="cards__like-btn-ico cards__like-btn-ico_active"></div>
-          </a>
+          <button class="page-btn cards__like-btn cards__like-btn_active" type="button"></button>
         </li>
         <li class="cards__item">
           <img src="./images/cards_image//catalina.jpeg" alt="Каталина" class="cards__image">
           <h2 class="cards__heading page__text">Каталина</h2>
-          <a href="#" class="cards__like-btn">
-            <div class="cards__like-btn-ico"></div>
-          </a>
+          <button class="page-btn cards__like-btn" type="button"></button>
         </li>
         <li class="cards__item">
           <img src="./images/cards_image/mojave.jpeg" alt="Мохаве" class="cards__image">
           <h2 class="cards__heading page__text">Мохаве</h2>
-          <a href="#" class="cards__like-btn">
-            <div class="cards__like-btn-ico"></div>
-          </a>
+          <button class="page-btn cards__like-btn" type="button"></button>
         </li>
         <li class="cards__item">
           <img src="./images/cards_image/big-sur.jpg" alt="Биг-Сур" class="cards__image">
           <h2 class="cards__heading page__text">Биг-Сур</h2>
-          <a href="#" class="cards__like-btn">
-            <div class="cards__like-btn-ico"></div>
-          </a>
+          <button class="page-btn cards__like-btn" type="button"></button>
         </li>
         <li class="cards__item">
           <img src="./images/cards_image/yosemite.jpeg" alt="Йосемити" class="cards__image">
           <h2 class="cards__heading page__text">Йосемити</h2>
-          <a href="#" class="cards__like-btn">
-            <div class="cards__like-btn-ico"></div>
-          </a>
+          <button class="page-btn cards__like-btn" type="button"></button>
         </li>
       </ul>
 
@@ -85,12 +71,10 @@
   <!-- Модальные окна. Модификатор popup_opened открывает модальное окно -->
   <div class="popup">
     <div class="popup__container">
-      <a href="#" class="popup__close-btn">
-        <div class="popup__close-ico"></div>
-      </a>
+      <button class="page-btn popup__close-btn" type="button"></button>
       <h2 class="popup__heading page__text">Редактировать профиль</h2>
       <form class="popup__form" name="profile-edit">
-        <fieldset class="popup__profile-edit">
+        <fieldset class="popup__form-field">
           <input type="text" class="popup__input" name="name" placeholder="Имя">
           <input type="text" class="popup__input" name="about" placeholder="О себе">
           <input type="submit" class="popup__submit" value="Сохранить">
