Внес правки после ревью

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <main class="main">
     <!--+++++++Блок profile+++++++-->
     <section class="profile page__section page__section_place_profile">
-      <img src="<%=require('./images/avatar.jpg')%>" alt="Аватар" class="profile__avatar" />
+      <img src="./images/avatar.jpg" alt="Аватар" class="profile__avatar" />
       <div class="profile__info">
         <h1 class="profile__name page__text">Жак-Ив Кусто</h1>
         <button name="btn-edit" type="button" class="page-btn page-btn_type_edit"
