feat: loader for forms submit-buttons added

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
           <input type="url" class="form__input form__input_type_img-link" id="form-input-img-link" name="link"
             placeholder="Ссылка на картинку" required />
           <span class="form__input-error form-input-img-link-error"></span>
-          <input type="submit" class="form__submit form__submit_disabled" value="Создать" />
+          <input type="submit" class="form__submit form__submit_type_add form__submit_disabled" value="Создать" />
         </fieldset>
       </form>
     </div>
