--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="page">
-  <!--+++++++Шапка сайта+++++++-->
+  <!--++++++Шапка сайта++++++-->
   <header class="header page__section page__section_place_header">
     <div class="header__logo"></div>
   </header>
