--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
               type="url"
               class="form__input form__input_type_avatar-link"
               id="form-input-avatar-link"
-              name="avatar-link"
+              name="avatarlink"
               placeholder="Ссылка на картинку"
               required
             />
